AC_INIT([cppsme], [0.0.1])
AC_CONFIG_SRCDIR([src/api_test.cc])
AM_INIT_AUTOMAKE


AC_CONFIG_MACRO_DIRS([m4])

AC_PROG_CXX
#AC_PROG_PYTHON

# Enable compiler warnings/errors
AX_CHECK_COMPILE_FLAG([-Wall], [CXXFLAGS="$CXXFLAGS -Wall"], [], [])
AX_CHECK_COMPILE_FLAG([-Werror], [CXXFLAGS="$CXXFLAGS -Werror"], [], [])
AX_CHECK_COMPILE_FLAG([-pedantic], [CXXFLAGS="$CXXFLAGS -pedantic"], [], [])

AX_CHECK_COMPILE_FLAG([-pthread], [CXXFLAGS="$CXXFLAGS -pthread"], [], [])

AX_CXX_COMPILE_STDCXX_11([noext],[mandatory])
LT_INIT

AX_WITH_CURSES

#INTI_REQUIRED_VERSION=1.0.7
#PKG_CHECK_MODULES(INTI, inti-1.0 >= $INTI_REQUIRED_VERSION)
AC_SUBST(INTI_CFLAGS)
AC_SUBST(INTI_LIBS)

AC_CONFIG_FILES([Makefile src/Makefile test/Makefile])
AC_OUTPUT