#bin_PROGRAMS = cppsme

libincludedir = $(includedir)/src

lib_LTLIBRARIES = libsme.la

#AM_CXXFLAGS = -std=c++11

#dist_noinst_DATA = ring-gen.py

libinclude_HEADERS = sme.h

libsme_la_SOURCES = sme.cc sme.h main.cc threading.cc threading.h runner.cc runner.h queue.cc queue.h bqueue.cc bqueue.h
# frogger.cc simplecpu.cc adder.cc

#cppsme_LDADD = @CURSES_LIB@
